--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,14 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  /* overflow: scroll; */
+  overflow: scroll;
   position: relative;
+}
+
+.box::-webkit-scrollbar,
+.list::-webkit-scrollbar {
+  display: none;
+  scroll-behavior: smooth;
 }
 
 .loader {
@@ -257,6 +263,7 @@ body {
 
 .details img {
   width: 33%;
+  /* height: 33%; */
 }
 
 .details-overview {
